--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Ignore snapshot.json generated running a scan
+# Ignore tuya device and account related files.
 snapshot.json
+devices.json
+tinytuya.json
+tuya-raw.json
